User API: GET / INSERT / DELETE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #mongodb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=12345
-spring.data.mongodb.database=user
+spring.data.mongodb.database=gams
 
 #logging
 logging.level.org.springframework.data=debug
