--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 #mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=12345
-spring.data.mongodb.database=gams
+spring.data.mongodb.uri=mongodb+srv://admin:admin@gams.j9gmz.mongodb.net/gams
 #logging
 logging.level.org.springframework.data=debug
 logging.level.=error
