--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ logging.level.org.springframework.data=debug
 logging.level.=error
 #server
 server.port=8081
+logging.level.org.springframework.web=DEBUG
