--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #mongodb
 spring.data.mongodb.uri=mongodb+srv://admin:admin@gams.j9gmz.mongodb.net/gams
+#spring.data.mongodb.uri=mongodb+srv://admin:admin@gams.j9gmz.mongodb.net/game
 #logging
 logging.level.org.springframework.data=debug
 logging.level.=error
