use new test database. set authorization to access user CRUD apis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #mongodb
 #spring.data.mongodb.uri=mongodb+srv://admin:admin@gams.j9gmz.mongodb.net/gams
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=12345
-spring.data.mongodb.database=gams
+spring.data.mongodb.uri=mongodb+srv://admin:admin@gams-2.01zmd.mongodb.net/gams
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=12345
+#spring.data.mongodb.database=gams
 #logging
 logging.level.org.springframework.data=debug
 logging.level.=error
